--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,40 +15,22 @@
   "license": "MIT",
   "scripts": {
     "build": "just-scripts build",
-    "build:site": "just-scripts storybook:build",
     "bundle": "just-scripts bundle",
     "lint": "just-scripts lint",
-    "test": "just-scripts test",
     "just": "just-scripts",
     "clean": "just-scripts clean",
     "code-style": "just-scripts code-style",
-    "start": "just-scripts dev:storybook",
-    "start-test": "just-scripts jest-watch",
-    "update-sass-theme-files": "node ./scripts/generateDefaultThemeSassFiles.js",
-    "update-snapshots": "just-scripts jest -u",
-    "update-api": "just-scripts update-api",
-    "codepen": "node ../../scripts/local-codepen.js"
+    "update-api": "just-scripts update-api"
   },
   "devDependencies": {
-    "@types/enzyme": "3.10.3",
-    "@types/enzyme-adapter-react-16": "1.0.3",
-    "@types/es6-promise": "0.0.32",
-    "@types/jest": "~24.9.0",
     "@types/react": "16.8.11",
     "@types/react-dom": "16.8.4",
-    "@types/react-test-renderer": "^16.0.0",
     "@types/webpack-env": "1.15.1",
     "@uifabric/build": "^7.0.0",
-    "@uifabric/example-app-base": "^7.12.22",
-    "@uifabric/jest-serializer-merge-styles": "^7.0.13",
     "@uifabric/tslint-rules": "^7.1.0",
-    "enzyme": "~3.10.0",
-    "enzyme-adapter-react-16": "^1.15.0",
-    "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
     "react-app-polyfill": "~1.0.1",
-    "react-dom": "16.8.6",
-    "react-test-renderer": "^16.3.0"
+    "react-dom": "16.8.6"
   },
   "dependencies": {
     "@uifabric/set-version": "^7.0.7",
