--- a/packages/fluentui/react-bindings/package.json
+++ b/packages/fluentui/react-bindings/package.json
@@ -10,6 +10,7 @@
     "@fluentui/react-compose": "^0.2.1",
     "@fluentui/state": "^0.47.0",
     "@fluentui/styles": "^0.47.0",
+    "@uifabric/utilities": "^7.15.3",
     "classnames": "^2.2.6",
     "fela": "^10.6.1",
     "lodash": "^4.17.15"
