--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,6 +24,7 @@
     "lint": "just-scripts lint",
     "start": "just-scripts dev:storybook",
     "start-test": "just-scripts jest-watch",
+    "test": "just-scripts test",
     "update-api": "just-scripts update-api",
     "update-snapshots": "just-scripts jest -u"
   },
