--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,17 @@ jobs:
           yarn prelint
         displayName: do syncpack and lint-files checks
 
+      ## Danger.js checks for Fluent UI N*
+      - script: |
+          if [ $BUILD_REASON == "PullRequest" ]; then
+            yarn danger ci
+          else
+            echo "Skipping Danger JS because BUILD_REASON ${BUILD_REASON} != PullRequest"
+          fi
+        displayName: danger
+        env:
+          DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
+
       ## only do scoped builds with PRs
       - script: |
           yarn buildci --no-cache --since $(target_branch)
@@ -72,7 +83,7 @@ jobs:
           BACKFILL_CACHE_PROVIDER: 'azure-blob'
           BACKFILL_CACHE_PROVIDER_OPTIONS: '{"connectionString":"$(BACKFILL_CONNECTION_STRING)", "container":"$(BACKFILL_CONTAINER)"}'
 
-      ## duplicated for  master CI builds
+      ## duplicated for master CI builds
       - script: |
           yarn bundle --no-cache --grouped
         displayName: bundle (master)
