--- a/packages/common-styles/.npmignore
+++ b/packages/common-styles/.npmignore
@@ -22,10 +22,7 @@ index.html
 jsconfig.json
 node_modules
 results
-src/**/*
-!src/**/examples/*.tsx
-!src/**/docs/**/*.md
-!src/**/*.types.ts
+# src # need to publish this
 temp
 tsconfig.json
 tsd.json
