--- a/packages/api-docs/package.json
+++ b/packages/api-docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@uifabric/api-docs",
   "version": "7.5.18",
+  "private": true,
   "description": "A package that transforms api-extractor .api.json files into page.json files",
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "@fluentui/react-theme-provider": "^0.14.2",
     "@fluentui/react-toggle": "^0.4.4",
     "@fluentui/theme": "^1.2.1",
+    "@uifabric/date-time": "^7.17.16",
     "@uifabric/merge-styles": "^7.19.1",
     "@uifabric/react-cards": "^0.113.3",
     "@uifabric/styling": "^7.16.9",
