--- a/packages/react-button/package.json
+++ b/packages/react-button/package.json
@@ -47,7 +47,7 @@
     "react-test-renderer": "^16.3.0"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/keyboard-key": "^0.2.12",
     "@fluentui/react-icons-mdl2": "^1.0.0-beta.0",
     "@fluentui/react-theme-provider": "^1.0.0-beta.0",
