--- a/packages/react-cards/package.json
+++ b/packages/react-cards/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "@fluentui/keyboard-key": "^0.2.12",
     "@fluentui/react": "^8.0.0-beta.0",
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-theme-provider": "^1.0.0-beta.0",
     "@fluentui/theme": "^2.0.0-beta.0",
     "@microsoft/load-themed-styles": "^1.10.26",
