--- a/packages/react-checkbox/package.json
+++ b/packages/react-checkbox/package.json
@@ -46,7 +46,7 @@
     "react-test-renderer": "^16.3.0"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-icons-mdl2": "^1.0.0-beta.0",
     "@fluentui/react-internal": "^8.0.0-beta.0",
     "@fluentui/react-hooks": "^8.0.0-beta.0",
