--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/react-compose",
-  "version": "0.19.7",
+  "version": "1.0.0-beta",
   "description": "Fluent UI React component composition.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
