--- a/packages/react-flex/package.json
+++ b/packages/react-flex/package.json
@@ -34,7 +34,7 @@
     "react-dom": "16.8.6"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-theme-provider": "^1.0.0-beta.0",
     "@fluentui/theme": "^2.0.0-beta.0",
     "@fluentui/set-version": "^8.0.0-beta.0",
