--- a/packages/react-image/package.json
+++ b/packages/react-image/package.json
@@ -46,7 +46,7 @@
     "react-test-renderer": "^16.3.0"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-theme-provider": "^1.0.0-beta.0",
     "@microsoft/load-themed-styles": "^1.10.26",
     "@fluentui/react-hooks": "^8.0.0-beta.0",
