--- a/packages/react-link/package.json
+++ b/packages/react-link/package.json
@@ -44,7 +44,7 @@
     "react-dom": "16.8.6"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-internal": "^8.0.0-beta.0",
     "@fluentui/react-hooks": "^8.0.0-beta.0",
     "@fluentui/set-version": "^8.0.0-beta.0",
