--- a/packages/react-text/package.json
+++ b/packages/react-text/package.json
@@ -45,7 +45,7 @@
     "react-test-renderer": "^16.3.0"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-theme-provider": "^1.0.0-beta.0",
     "@fluentui/theme": "^2.0.0-beta.0",
     "@microsoft/load-themed-styles": "^1.10.26",
