--- a/packages/react-theme-provider/package.json
+++ b/packages/react-theme-provider/package.json
@@ -45,7 +45,7 @@
     "react-test-renderer": "^16.3.0"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-stylesheets": "^1.0.0-beta.0",
     "@fluentui/theme": "^2.0.0-beta.0",
     "@fluentui/react-window-provider": "^2.0.0-beta.0",
