--- a/packages/react-toggle/package.json
+++ b/packages/react-toggle/package.json
@@ -43,7 +43,7 @@
     "sinon": "^4.1.3"
   },
   "dependencies": {
-    "@fluentui/react-compose": "^0.19.7",
+    "@fluentui/react-compose": "^1.0.0-beta",
     "@fluentui/react-internal": "^8.0.0-beta.0",
     "@fluentui/react-hooks": "^8.0.0-beta.0",
     "@fluentui/set-version": "^8.0.0-beta.0",
