--- a/packages/fluentui/e2e/.eslintrc.json
+++ b/packages/fluentui/e2e/.eslintrc.json
@@ -3,11 +3,7 @@
   "root": true,
   "rules": {
     "import/no-default-export": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": true
-      }
-    ]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "no-console": "off"
   }
 }
