--- a/apps/public-docsite/package.json
+++ b/apps/public-docsite/package.json
@@ -50,6 +50,7 @@
     "@fluentui/font-icons-mdl2": "^8.0.0-beta.1",
     "@fluentui/set-version": "^8.0.0-beta.0",
     "@fluentui/theme-samples": "^8.0.0-beta.2",
+    "@fluentui/utilities": "^8.0.0-beta.1",
     "@types/react": "16.8.25",
     "@types/react-dom": "16.8.4",
     "json-loader": "^0.5.7",
