--- a/packages/react-components/react-persona/package.json
+++ b/packages/react-components/react-persona/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fluentui/react-avatar": "^9.3.7",
     "@fluentui/react-badge": "^9.0.26",
+    "@fluentui/react-shared-contexts": "^9.2.0",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.6.0",
     "@griffel/react": "^1.5.2",
