--- a/packages/react-components/react-spinner/package.json
+++ b/packages/react-components/react-spinner/package.json
@@ -32,8 +32,9 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-label": "^9.0.22",
+    "@fluentui/react-shared-contexts": "^9.2.0",
+    "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.6.0",
     "@griffel/react": "^1.5.2",
     "tslib": "^2.1.0"
