--- a/packages/react-components/react-card/package.json
+++ b/packages/react-components/react-card/package.json
@@ -52,9 +52,7 @@
   },
   "beachball": {
     "disallowedChangeTypes": [
-      "major",
-      "minor",
-      "patch"
+      "major"
     ]
   },
   "exports": {
