--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -58,6 +58,7 @@
     "@fluentui/react-radio": "^9.1.1",
     "@fluentui/react-select": "^9.1.1",
     "@fluentui/react-shared-contexts": "^9.3.0",
+    "@fluentui/react-skeleton": "9.0.0-beta.0",
     "@fluentui/react-slider": "^9.1.1",
     "@fluentui/react-spinbutton": "^9.2.1",
     "@fluentui/react-spinner": "^9.1.1",
