--- a/packages/react-components/react-skeleton/package.json
+++ b/packages/react-components/react-skeleton/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fluentui/react-skeleton",
-  "version": "9.0.0-alpha.0",
-  "private": true,
+  "version": "9.0.0-beta.0",
   "description": "Converged v9 Skeleton Component",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
