--- a/packages/react-components/react-text/package.json
+++ b/packages/react-components/react-text/package.json
@@ -32,8 +32,9 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@griffel/react": "^1.5.2",
+    "@fluentui/react-shared-contexts": "^9.3.0",
     "@fluentui/react-theme": "^9.1.5",
+    "@griffel/react": "^1.5.2",
     "@fluentui/react-utilities": "^9.7.0",
     "tslib": "^2.1.0"
   },
