--- a/packages/react-components/react-infobutton/package.json
+++ b/packages/react-components/react-infobutton/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@fluentui/react-icons": "^2.0.175",
+    "@fluentui/react-label": "^9.1.3",
     "@fluentui/react-popover": "^9.5.3",
     "@fluentui/react-tabster": "^9.5.7",
     "@fluentui/react-theme": "^9.1.6",
