--- a/package.json
+++ b/package.json
@@ -379,7 +379,8 @@
     "eslint": "7.25.0",
     "@mdx-js/loader/loader-utils": "~2.0.4",
     "swc-loader": "^0.2.3",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "puppeteer": "19.6.0"
   },
   "syncpack": {
     "prod": true,
