--- a/packages/react-components/react-toast/package.json
+++ b/packages/react-components/react-toast/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "react-transition-group": "^4.4.1",
+    "@fluentui/react-aria": "^9.3.21",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.5",
     "@fluentui/react-portal": "^9.2.11",
