--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     "@griffel/webpack-loader": "2.1.8",
     "@jest/reporters": "28.1.3",
     "@mdx-js/loader": "1.6.22",
-    "@microsoft/api-extractor": "7.18.1",
+    "@microsoft/api-extractor": "7.22.2",
+    "@microsoft/api-extractor-model": "7.17.1",
+    "@microsoft/tsdoc": "0.14.1",
     "@microsoft/eslint-plugin-sdl": "0.1.9",
     "@microsoft/load-themed-styles": "1.10.26",
     "@microsoft/loader-load-themed-styles": "2.0.17",
@@ -343,7 +345,7 @@
     "tsconfig-paths": "4.1.0",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "tslib": "2.4.1",
-    "typescript": "4.3.5",
+    "typescript": "4.5.5",
     "vinyl": "2.2.0",
     "vrscreenshotdiff": "0.0.17",
     "webpack": "5.83.1",
