--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -241,6 +241,7 @@ packages/react-components/babel-preset-storybook-full-source @microsoft/fluentui
 packages/react-components/react-jsx-runtime @microsoft/teams-prg
 packages/react-components/react-toast @microsoft/teams-prg
 packages/react-components/react-search @microsoft/cxe-coastal
+packages/react-components/react-colorpicker-compat @microsoft/cxe-red @sopranopillow
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
 ## Components
