--- a/packages/react-components/react-tags/package.json
+++ b/packages/react-components/react-tags/package.json
@@ -39,6 +39,7 @@
     "@fluentui/react-avatar": "^9.5.5",
     "@fluentui/react-icons": "^2.0.203",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.6",
+    "@fluentui/react-shared-contexts": "^9.5.0",
     "@fluentui/react-tabster": "^9.7.5",
     "@fluentui/react-theme": "^9.1.8",
     "@fluentui/react-utilities": "^9.9.2",
