--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@griffel/eslint-plugin": "^1.2.0",
     "@griffel/jest-serializer": "1.1.9",
     "@griffel/react": "^1.5.7",
+    "@griffel/shadow-dom": "0.1.0",
     "@griffel/webpack-extraction-plugin": "0.3.11",
     "@griffel/webpack-loader": "2.1.13",
     "@jest/reporters": "29.5.0",
@@ -125,9 +126,9 @@
     "@storybook/manager-webpack5": "6.5.15",
     "@storybook/react": "6.5.15",
     "@storybook/theming": "6.5.15",
+    "@swc-node/register": "1.6.1",
     "@swc/core": "1.3.30",
     "@swc/helpers": "0.4.14",
-    "@swc-node/register": "1.6.1",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.2",
@@ -306,7 +307,7 @@
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-is": "17.0.2",
-    "react-shadow": "20.2.0",
+    "react-shadow": "20.3.0",
     "react-test-renderer": "17.0.2",
     "react-vis": "1.11.7",
     "read-pkg-up": "7.0.1",
