--- a/packages/react-charting/package.json
+++ b/packages/react-charting/package.json
@@ -65,6 +65,7 @@
   },
   "peerDependencies": {
     "@fluentui/react": "^8.110.8",
+    "@testing-library/react": "12.1.2",
     "@types/react": ">=16.8.0 <19.0.0",
     "@types/react-dom": ">=16.8.0 <19.0.0",
     "react": ">=16.8.0 <19.0.0",
